# ygo-meta-ai

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  pyproject.toml  test_cleanba_init.py  test_envs.py  train_out.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  update_cards.yml
checkpoints/: agent.flax_model  model_args.json
data/: card_info.json  card_names.json  code_list.txt
data/engines/BrandedDracotail/: baseline.ydk  engine.ydk
data/engines/K9Vanquishsoul/: baseline.ydk  engine.ydk
data/engines/MagnetBlock/: baseline.ydk  engine.ydk
data/engines/RyzealMitsurugi/: baseline.ydk  engine.ydk
data/engines/SolfachordYummy/: baseline.ydk  engine.ydk
data/engines/blue_eyes/: engine.ydk
data/engines/hero/: engine.ydk
data/engines/snake_eye/: engine.ydk
data/lflist/: README.md
data/staples/: backrow.yaml  extradeck.yaml  handtraps.yaml  main_staple.yaml
results/meta_md_may_2026/: FAITHFUL_WINRATE_FIXES.md  RESULT.md  canonicalization.json  deck_manifest.json  meta_prediction.json  meta_prediction_smoke.json  refresh_gauntlet.py
results/meta_md_may_2026/decks/: K9Vanquishsoul.ydk  KewlTune_Sweep_MDM_2026-04-12.ydk  MagnetAdamancipator_YGOPRODeck_697472.ydk  RadiantSkyStriker_YGOPRODeck_706980.ydk  RyzealMitsurugi_Fuan_MDM_2026-03-07.ydk  SolfachordYummy.ydk
results/meta_md_may_2026/gauntlet/: payoff.npy
results/meta_md_may_2026/gauntlet_seat_balanced_80/: deck_ids.fingerprints.json  deck_ids.json  matrix.txt  meta_prediction.json  payoff.npy
results/meta_md_may_2026/gauntlet_smoke/: deck_ids.json  payoff.npy
results/meta_md_may_2026/gauntlet_top_tier_seat_balanced_200_guarded/: deck_ids.fingerprints.json  deck_ids.json  matrix.txt  meta_prediction.json  payoff.npy
results/payoff_matrices/: gen_000_deck_ids.json
scripts/: build_card_db.py  deck_editor.py  demo_agent.py  game_runner.py  run_meta_loop.py  setup_cloud_gpu.sh  setup_wsl.sh  update_scripts.sh
src/ygo_meta/cli/: full_eval.py  gauntlet.py  play.py  simulate.py  tech_delta.py  train.py
src/ygo_meta/deck_builder/: deck_model.py  generator.py  lflist.py  validator.py  ydk_parser.py
src/ygo_meta/engine/: client.py  runner.py  types.py
src/ygo_meta/evaluator/: __init__.py  archetype_loader.py  delta.py  human_runner.py  judgment_store.py  sampler.py
src/ygo_meta/evaluator/web/: server.py
src/ygo_meta/evaluator/web/static/: index.html
src/ygo_meta/llm_agent/: agent.py  card_db.py  formatter.py
src/ygo_meta/llm_agent/prompts/: decision.txt  system.txt
src/ygo_meta/meta_solver/: __init__.py  gauntlet.py  replicator.py
src/ygo_meta/simulation/: battle_runner.py  evolution.py  llm_battle_runner.py  nash.py  obs_sanitizer.py  payoff_matrix.py
tests/: test_deck_generator.py  test_evaluator.py  test_formatter.py  test_game_runner_obs.py  test_gauntlet_safety.py  test_lflist.py  test_magnetblock_deck.py  test_nash.py  test_ydk_parser.py
